Moved login modal to bottom in order to fix spacing issues

--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -17,7 +17,7 @@ body {
     color: rgba(255, 255, 255, 0.5);
 }
 body > .container {
-    padding: 15px 15px 0;
+    padding: 30px 15px 0;
 }
 .footer > .container {
     padding-left: 15px;
